--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -7,12 +7,9 @@ services:
         ports:
             - "80:80"
             - "443:443"
-            - "25:25"
-            - "465:465"
-            - "993:993"
         volumes:
-            - ./data/traefik/config:/etc/traefik
-            - ./data/traefik/letsencrypt:/letsencrypt
+            - ./traefik.yml:/etc/traefik/traefik.yml
+            - traefik-letsencrypt:/letsencrypt
             - /etc/localtime:/etc/localtime:ro
             - /var/run/docker.sock:/var/run/docker.sock:ro
         environment:
@@ -27,9 +24,9 @@ services:
         depends_on:
             - traefik
         volumes:
+            - traefik-letsencrypt:/traefik:ro
+            - traefik-certs-dumper-output:/output
             - /etc/localtime:/etc/localtime:ro
-            - ./data/traefik/letsencrypt:/traefik:ro
-            - certs:/output
         restart: unless-stopped
 
 networks:
@@ -37,5 +34,7 @@ networks:
         name: proxy
 
 volumes:
-    certs:
-        name: certs
+    traefik-letsencrypt:
+        name: traefik-letsencrypt
+    traefik-certs-dumper-output:
+        name: traefik-certs-dumper-output
