--- a/dumbassets/compose.yaml
+++ b/dumbassets/compose.yaml
@@ -4,10 +4,12 @@ services:
         container_name: ts-dumbassets
         hostname: dumbassets
         environment:
-            - TS_AUTHKEY=$TS_AUTHKEY
-            - TS_STATE_DIR=/var/lib/tailscale
-            - TS_USERSPACE=false
-            - TS_SERVE_CONFIG=/config/serve-config.json
+            TS_AUTHKEY_FILE: /run/secrets/ts-dumbassets-authkey
+            TS_STATE_DIR: /var/lib/tailscale
+            TS_USERSPACE: false
+            TS_SERVE_CONFIG: /config/serve-config.json
+        secrets:
+            - ts-dumbassets-authkey
         volumes:
             - ts-dumbassets-state:/var/lib/tailscale
             - ./serve-config.json:/config/serve-config.json
@@ -28,6 +30,10 @@ services:
         volumes:
             - dumbassets-data:/app/data
         restart: unless-stopped
+
+secrets:
+    ts-dumbassets-authkey:
+        external: true
 
 volumes:
     ts-dumbassets-state:
