--- a/dumbassets/compose.yaml
+++ b/dumbassets/compose.yaml
@@ -4,12 +4,12 @@ services:
         container_name: ts-dumbassets
         hostname: dumbassets
         environment:
-            TS_AUTHKEY_FILE: /run/secrets/ts-dumbassets-authkey
+            TS_AUTHKEY_FILE: /run/secrets/ts-authkey
             TS_STATE_DIR: /var/lib/tailscale
             TS_USERSPACE: false
             TS_SERVE_CONFIG: /config/serve-config.json
         secrets:
-            - ts-dumbassets-authkey
+            - ts-authkey
         volumes:
             - ts-dumbassets-state:/var/lib/tailscale
             - ./serve-config.json:/config/serve-config.json
@@ -32,7 +32,7 @@ services:
         restart: unless-stopped
 
 secrets:
-    ts-dumbassets-authkey:
+    ts-authkey:
         external: true
 
 volumes:
