--- a/dumbbudget/compose.yaml
+++ b/dumbbudget/compose.yaml
@@ -4,10 +4,12 @@ services:
         container_name: ts-dumbbudget
         hostname: dumbbudget
         environment:
-            - TS_AUTHKEY=$TS_AUTHKEY
-            - TS_STATE_DIR=/var/lib/tailscale
-            - TS_USERSPACE=false
-            - TS_SERVE_CONFIG=/config/serve-config.json
+            TS_AUTHKEY_FILE: /run/secrets/ts-authkey
+            TS_STATE_DIR: /var/lib/tailscale
+            TS_USERSPACE: false
+            TS_SERVE_CONFIG: /config/serve-config.json
+        secrets:
+            - ts-authkey
         volumes:
             - ts-dumbbudget-state:/var/lib/tailscale
             - ./serve-config.json:/config/serve-config.json
@@ -30,6 +32,10 @@ services:
         volumes:
             - dumbbudget-data:/app/data
         restart: unless-stopped
+
+secrets:
+    ts-authkey:
+        external: true
 
 volumes:
     ts-dumbbudget-state:
