--- a/glance/compose.yaml
+++ b/glance/compose.yaml
@@ -4,10 +4,12 @@ services:
         container_name: ts-glance
         hostname: glance
         environment:
-            - TS_AUTHKEY=$TS_AUTHKEY
-            - TS_STATE_DIR=/var/lib/tailscale
-            - TS_USERSPACE=false
-            - TS_SERVE_CONFIG=/config/serve-config.json
+            TS_AUTHKEY_FILE: /run/secrets/ts-authkey
+            TS_STATE_DIR: /var/lib/tailscale
+            TS_USERSPACE: false
+            TS_SERVE_CONFIG: /config/serve-config.json
+        secrets:
+            - ts-authkey
         volumes:
             - ts-glance-state:/var/lib/tailscale
             - ./serve-config.json:/config/serve-config.json
@@ -23,13 +25,15 @@ services:
         network_mode: service:ts-glance
         depends_on:
             - ts-glance
-        env_file:
-            - .env
         volumes:
             - ./config:/app/config
             - ./assets:/app/assets
             - /var/run/docker.sock:/var/run/docker.sock:ro
         restart: unless-stopped
+
+secrets:
+    ts-authkey:
+        external: true
 
 volumes:
     ts-glance-state:
