--- a/jellyfin/compose.yaml
+++ b/jellyfin/compose.yaml
@@ -4,10 +4,12 @@ services:
         container_name: ts-jellyfin
         hostname: jellyfin
         environment:
-            - TS_AUTHKEY=$TS_AUTHKEY
-            - TS_STATE_DIR=/var/lib/tailscale
-            - TS_USERSPACE=false
-            - TS_SERVE_CONFIG=/config/serve-config.json
+            TS_AUTHKEY_FILE: /run/secrets/ts-authkey
+            TS_STATE_DIR: /var/lib/tailscale
+            TS_USERSPACE: false
+            TS_SERVE_CONFIG: /config/serve-config.json
+        secrets:
+            - ts-authkey
         volumes:
             - ts-jellyfin-state:/var/lib/tailscale
             - ./serve-config.json:/config/serve-config.json
@@ -33,6 +35,10 @@ services:
               target: /media
               read_only: true
         restart: unless-stopped
+
+secrets:
+    ts-authkey:
+        external: true
 
 volumes:
     ts-jellyfin-state:
