--- a/memos/compose.yaml
+++ b/memos/compose.yaml
@@ -4,10 +4,12 @@ services:
         container_name: ts-memos
         hostname: memos
         environment:
-            - TS_AUTHKEY=$TS_AUTHKEY
-            - TS_STATE_DIR=/var/lib/tailscale
-            - TS_USERSPACE=false
-            - TS_SERVE_CONFIG=/config/serve-config.json
+            TS_AUTHKEY_FILE: /run/secrets/ts-authkey
+            TS_STATE_DIR: /var/lib/tailscale
+            TS_USERSPACE: false
+            TS_SERVE_CONFIG: /config/serve-config.json
+        secrets:
+            - ts-authkey
         volumes:
             - ts-memos-state:/var/lib/tailscale
             - ./serve-config.json:/config/serve-config.json
@@ -26,6 +28,10 @@ services:
         volumes:
             - memos-data:/var/opt/memos
         restart: unless-stopped
+
+secrets:
+    ts-authkey:
+        external: true
 
 volumes:
     ts-memos-state:
