--- a/dumbpad/compose.yaml
+++ b/dumbpad/compose.yaml
@@ -26,9 +26,9 @@ services:
         depends_on:
             - ts-dumbpad
         environment:
-            - SITE_TITLE=DumbPad
-            - DUMBPAD_PIN=
-            - BASE_URL=https://dumbpad.duckbill-karat.ts.net
+            SITE_TITLE: DumbPad
+            DUMBPAD_PIN:
+            BASE_URL: https://dumbpad.duckbill-karat.ts.net
         volumes:
             - dumbpad-data:/app/data
         restart: unless-stopped
