--- a/gitea/compose.yaml
+++ b/gitea/compose.yaml
@@ -26,8 +26,8 @@ services:
         depends_on:
             - ts-gitea
         environment:
-            - USER_UID=1000
-            - USER_GID=1000
+            USER_UID: 1000
+            USER_GID: 1000
         volumes:
             - gitea-data:/data
             - /etc/timezone:/etc/timezone:ro
