--- a/dumbpad/compose.yaml
+++ b/dumbpad/compose.yaml
@@ -11,8 +11,8 @@ services:
         secrets:
             - ts-authkey
         volumes:
-            - ts-dumbpad-state:/var/lib/tailscale
-            - ./serve-config.json:/config/serve-config.json
+            - ts-dumbpad-state:/var/lib/tailscale:Z
+            - ./serve-config.json:/config/serve-config.json:ro,Z
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -26,7 +26,7 @@ services:
         depends_on:
             - ts-dumbpad
         volumes:
-            - dumbpad-data:/app/data
+            - dumbpad-data:/app/data:Z
         restart: unless-stopped
 
 secrets:
