--- a/gitea/compose.yaml
+++ b/gitea/compose.yaml
@@ -11,8 +11,8 @@ services:
         secrets:
             - ts-authkey
         volumes:
-            - ts-gitea-state:/var/lib/tailscale
-            - ./serve-config.json:/config/serve-config.json
+            - ts-gitea-state:/var/lib/tailscale:Z
+            - ./serve-config.json:/config/serve-config.json:ro,Z
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -26,7 +26,7 @@ services:
         depends_on:
             - ts-gitea
         volumes:
-            - gitea-data:/data
+            - gitea-data:/data:Z
             - /etc/timezone:/etc/timezone:ro
             - /etc/localtime:/etc/localtime:ro
         restart: unless-stopped
