--- a/glance/compose.yaml
+++ b/glance/compose.yaml
@@ -11,8 +11,8 @@ services:
         secrets:
             - ts-authkey
         volumes:
-            - ts-glance-state:/var/lib/tailscale
-            - ./serve-config.json:/config/serve-config.json
+            - ts-glance-state:/var/lib/tailscale:Z
+            - ./serve-config.json:/config/serve-config.json:ro,Z
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -26,8 +26,8 @@ services:
         depends_on:
             - ts-glance
         volumes:
-            - ./config:/app/config
-            - ./assets:/app/assets
+            - ./config:/app/config:ro,Z
+            - ./assets:/app/assets:ro,Z
             - /var/run/docker.sock:/var/run/docker.sock:ro
         restart: unless-stopped
 
