--- a/memos/compose.yaml
+++ b/memos/compose.yaml
@@ -11,8 +11,8 @@ services:
         secrets:
             - ts-authkey
         volumes:
-            - ts-memos-state:/var/lib/tailscale
-            - ./serve-config.json:/config/serve-config.json
+            - ts-memos-state:/var/lib/tailscale:Z
+            - ./serve-config.json:/config/serve-config.json:ro,Z
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -26,7 +26,7 @@ services:
         depends_on:
             - ts-memos
         volumes:
-            - memos-data:/var/opt/memos
+            - memos-data:/var/opt/memos:Z
         restart: unless-stopped
 
 secrets:
