--- a/searxng/compose.yaml
+++ b/searxng/compose.yaml
@@ -11,8 +11,8 @@ services:
         secrets:
             - ts-authkey
         volumes:
-            - ts-searxng-state:/var/lib/tailscale
-            - ./serve-config.json:/config/serve-config.json
+            - ts-searxng-state:/var/lib/tailscale:Z
+            - ./serve-config.json:/config/serve-config.json:ro,Z
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
@@ -26,8 +26,8 @@ services:
         depends_on:
             - ts-searxng
         volumes:
-            - searxng-config:/etc/searxng/
-            - searxng-data:/var/cache/searxng/
+            - searxng-config:/etc/searxng:Z
+            - searxng-data:/var/cache/searxng:Z
         restart: unless-stopped
 
 secrets:
