--- a/traefik/compose.yaml
+++ b/traefik/compose.yaml
@@ -9,8 +9,8 @@ services:
         secrets:
             - cf-dns-api-token
         volumes:
-            - ./traefik.yml:/etc/traefik/traefik.yml
-            - traefik-letsencrypt:/letsencrypt
+            - ./traefik.yml:/etc/traefik/traefik.yml:ro,Z
+            - traefik-letsencrypt:/letsencrypt:z
             - /etc/localtime:/etc/localtime:ro
             - /var/run/docker.sock:/var/run/docker.sock:ro
         ports:
@@ -26,8 +26,8 @@ services:
         depends_on:
             - traefik
         volumes:
-            - traefik-letsencrypt:/traefik:ro
-            - traefik-certs-dumper-output:/output
+            - traefik-letsencrypt:/traefik:ro,z
+            - traefik-certs-dumper-output:/output:z
             - /etc/localtime:/etc/localtime:ro
         restart: unless-stopped
 
