Add Quadlet files for all services and fix volume syntax
This adds Podman Quadlet files for Bitwarden, Dumbassets, Dumbbudget,
Dumbdo, Dumbkan, Dumbpad, Gitea, Glance, Jellyfin, Memos, Searxng, and
TSIDP. Also fixes the order of volume options in Docker Compose files to
use :Z,ro instead of :ro,Z for compatibility.

--- a/dumbpad/compose.yaml
+++ b/dumbpad/compose.yaml
@@ -12,7 +12,7 @@ services:
             - ts-authkey
         volumes:
             - ts-dumbpad-state:/var/lib/tailscale:Z
-            - ./serve-config.json:/config/serve-config.json:ro,Z
+            - ./serve-config.json:/config/serve-config.json:Z,ro
         devices:
             - /dev/net/tun:/dev/net/tun
         cap_add:
