Switch to ghcr.io for Tailscale and Jellyfin images
Rename traefik.yml to traefik.yaml and update references

Replace proxy network with traefik network for all services

Expand and reorganize TODO.md with priorities and notes

--- a/ansible/roles/traefik/tasks/main.yml
+++ b/ansible/roles/traefik/tasks/main.yml
@@ -5,14 +5,6 @@
       state: directory
       mode: "0755"
 
-- name: Ensure proxy network file is in place
-  ansible.builtin.copy:
-      src: proxy.network
-      dest: "/etc/containers/systemd/proxy.network"
-      backup: true
-      mode: "0644"
-  notify: Restart Traefik service
-
 - name: Ensure traefik service files are in place
   ansible.builtin.copy:
       src: "{{ item }}"
@@ -20,10 +12,11 @@
       backup: true
       mode: "0644"
   loop:
+      - traefik.network
       - traefik.pod
       - traefik.container
       - traefik-certs.volume
       - traefik-certs-dumper.container
       - traefik-certs-dumper.volume
-      - traefik.yml
+      - traefik.yaml
   notify: Restart Traefik service
