--- a/ansible/roles/bitwarden/files/compose.yaml
+++ b/ansible/roles/bitwarden/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-bitwarden:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-bitwarden
         hostname: bitwarden
         environment:
