--- a/ansible/roles/dumbassets/files/compose.yaml
+++ b/ansible/roles/dumbassets/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-dumbassets:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-dumbassets
         hostname: dumbassets
         environment:
