--- a/ansible/roles/dumbbudget/files/compose.yaml
+++ b/ansible/roles/dumbbudget/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-dumbbudget:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-dumbbudget
         hostname: dumbbudget
         environment:
