--- a/ansible/roles/dumbdo/files/compose.yaml
+++ b/ansible/roles/dumbdo/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-dumbdo:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-dumbdo
         hostname: dumbdo
         environment:
