--- a/ansible/roles/dumbkan/files/compose.yaml
+++ b/ansible/roles/dumbkan/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-dumbkan:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-dumbkan
         hostname: dumbkan
         environment:
