--- a/ansible/roles/dumbpad/files/compose.yaml
+++ b/ansible/roles/dumbpad/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-dumbpad:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-dumbpad
         hostname: dumbpad
         environment:
