--- a/ansible/roles/gitea/files/compose.yaml
+++ b/ansible/roles/gitea/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-gitea:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-gitea
         hostname: gitea
         environment:
