--- a/ansible/roles/glance/files/compose.yaml
+++ b/ansible/roles/glance/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-glance:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-glance
         hostname: glance
         environment:
