--- a/ansible/roles/jellyfin/files/compose.yaml
+++ b/ansible/roles/jellyfin/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-jellyfin:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-jellyfin
         hostname: jellyfin
         environment:
@@ -20,7 +20,7 @@ services:
         restart: unless-stopped
 
     jellyfin:
-        image: docker.io/jellyfin/jellyfin:latest
+        image: ghcr.io/jellyfin/jellyfin:latest
         container_name: jellyfin
         network_mode: service:ts-jellyfin
         depends_on:
