--- a/ansible/roles/memos/files/compose.yaml
+++ b/ansible/roles/memos/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-memos:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-memos
         hostname: memos
         environment:
