--- a/ansible/roles/searxng/files/compose.yaml
+++ b/ansible/roles/searxng/files/compose.yaml
@@ -1,6 +1,6 @@
 services:
     ts-searxng:
-        image: docker.io/tailscale/tailscale:latest
+        image: ghcr.io/tailscale/tailscale:latest
         container_name: ts-searxng
         hostname: searxng
         environment:
