--- a/ansible/roles/traefik/files/compose.yaml
+++ b/ansible/roles/traefik/files/compose.yaml
@@ -9,7 +9,7 @@ services:
         secrets:
             - cf-dns-api-token
         volumes:
-            - ./traefik.yml:/etc/traefik/traefik.yml:Z,ro
+            - ./traefik.yaml:/etc/traefik/traefik.yml:Z,ro
             - traefik-certs:/letsencrypt:z
             - /etc/localtime:/etc/localtime:ro
             - /var/run/docker.sock:/var/run/docker.sock:ro
