Rename serve-config.json files to service-specific names

--- a/ansible/roles/bitwarden/tasks/main.yml
+++ b/ansible/roles/bitwarden/tasks/main.yml
@@ -18,5 +18,5 @@
       - .env
       - ts-bitwarden.container
       - ts-bitwarden-state.volume
-      - serve-config.json
+      - bitwarden.json
   notify: Restart Bitwarden service
