--- a/ansible/roles/dumbkan/tasks/main.yml
+++ b/ansible/roles/dumbkan/tasks/main.yml
@@ -17,5 +17,5 @@
       - dumbkan-data.volume
       - ts-dumbkan.container
       - ts-dumbkan-state.volume
-      - serve-config.json
+      - dumbkan.json
   notify: Restart Dumbkan service
