--- a/ansible/roles/gitea/tasks/main.yml
+++ b/ansible/roles/gitea/tasks/main.yml
@@ -17,5 +17,5 @@
       - gitea-data.volume
       - ts-gitea.container
       - ts-gitea-state.volume
-      - serve-config.json
+      - gitea.json
   notify: Restart Gitea service
