--- a/ansible/roles/traefik/tasks/main.yml
+++ b/ansible/roles/traefik/tasks/main.yml
@@ -13,6 +13,7 @@
   loop:
       - traefik.network
       - traefik.pod
+      - cloudflared.container
       - traefik.container
       - traefik-certs.volume
       - traefik-certs-dumper.container
