--- a/ansible/roles/pocket-id/files/compose.yaml
+++ b/ansible/roles/pocket-id/files/compose.yaml
@@ -3,7 +3,7 @@ services:
         image: ghcr.io/pocket-id/pocket-id:v1
         container_name: pocket-id
         networks:
-            - proxy
+            - traefik
         environment:
             APP_URL: https://id.solisec.org
             TRUST_PROXY: true
@@ -24,7 +24,7 @@ services:
         image: docker.io/nginx:latest
         container_name: webfinger
         networks:
-            - proxy
+            - traefik
         volumes:
             - ./webfinger:/usr/share/nginx/html/.well-known/webfinger:Z,ro
         labels:
@@ -33,8 +33,8 @@ services:
         restart: unless-stopped
 
 networks:
-    proxy:
-        name: proxy
+    traefik:
+        name: traefik
         external: true
 
 volumes:
