Remove Traefik and Docker Compose files and update containers

--- a/ansible/roles/pocket-id/tasks/main.yml
+++ b/ansible/roles/pocket-id/tasks/main.yml
@@ -12,6 +12,7 @@
       mode: "0644"
   loop:
       - pocket-id.pod
+      - cloudflared.container
       - pocket-id.container
       - pocket-id-data.volume
       - webfinger.container
