--- a/ansible/roles/dumbdo/tasks/main.yml
+++ b/ansible/roles/dumbdo/tasks/main.yml
@@ -18,3 +18,10 @@
       - ts-dumbdo-state.volume
       - dumbdo.json
   notify: Restart Dumbdo service
+
+- name: Ensure dumbdo service secrets are available
+  containers.podman.podman_secret:
+      state: present
+      name: "ts-authkey"
+      data: "{{ tailscale.ts_authkey }}"
+  no_log: true
