--- a/ansible/roles/tsidp/tasks/main.yml
+++ b/ansible/roles/tsidp/tasks/main.yml
@@ -14,3 +14,10 @@
       - tsidp.container
       - tsidp-data.volume
   notify: Restart Tsidp service
+
+- name: Ensure tsidp service secrets are available
+  containers.podman.podman_secret:
+      state: present
+      name: "ts-authkey"
+      data: "{{ tailscale.ts_authkey }}"
+  no_log: true
