Update podman config and tasks, set Pocket-ID image to latest
- Add custom storage.conf and podman role tasks - Change Pocket-ID
container image to use :latest tag - Reorder roles in site.yml and
comment out

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -5,16 +5,17 @@
   vars_files:
       - vault.yml
   roles:
+      # - podman
+      - pocket-id
+      - gitea
       - bitwarden
-      - dumbassets
-      - dumbbudget
+      - searxng
+      - memos
+      - jellyfin
+      - glance
+      - dumbpad
       - dumbdo
       - dumbkan
-      - dumbpad
-      - gitea
-      - glance
-      - jellyfin
-      - memos
-      - pocket-id
-      - searxng
+      - dumbbudget
+      - dumbassets
       # - tsidp
