Add general role for system setup and update podman tasks

--- a/ansible/roles/podman/tasks/main.yml
+++ b/ansible/roles/podman/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Ensure podman packages are installed
-  ansible.builtin.package:
+  ansible.builtin.dnf:
       name:
           - podman
           - podman-compose
